<resources>
    <string name="app_name">DemoTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="text_error">* Логин или пароль введены неверно</string>
    <string name="pay">Платежи</string>
    <string name="amount">Сумма</string>
    <string name="create">Платеж создан</string>
</resources>