<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".presentation.AuthorizationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_content"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:textColor="@color/text_dark_primary"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:inputType="textPersonName"
            android:hint="@string/login"
            android:textSize="16sp"
            android:textColor="@color/text_dark_primary"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="16dp"
            android:textColorHint="@color/input_placeholdrer_text"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_auth" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/text_dark_primary"
            android:textColorHint="@color/input_placeholdrer_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login" />

        <Button
            android:id="@+id/bt_auth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"
            style="?android:attr/borderlessButtonStyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/bg_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_error"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:visibility="invisible"
            android:textColor="@color/color_error"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_auth" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
